12.dec (lv)
      - MusicXML export of annotations
10.dec (mi)
      - Extended EditStaffType dlg box to deal with different properties
        for each staff group.
      - Added 4 (alpha) fonts for tabulatures, as both .sfd FontForge sources
        and generated .ttf.
9.dec (mi)
      - Made StaffTypeTablature() more self-contained and more efficient.
      - New Score wizard does not create a tablature staff if the instrument
        does not contain a tablature string list.
8.dec (la)
      - fix #8184: Creating parts with cross staff barlines crash
7.dec (lv)
      - fix segfault when importing MusicXML file
      (ws)
      - Splitted header/footer into three parts: left/center/right.
        Footer/center is preconfigured with copyright meta data.
        This should fix #8154 (test needed).
      - offset footer/header text position by page margins (feature request #8059)
      - excerpts now have "multi measure rests" flag on by default
      - fix excerpts dialog: show track names
      - fixed track number for chord elements after creating excerpt, fixes a crash
4.dec (la)
      - fix #8161: Missing lyrics in MIDI import
2.dec (mi)
      - replaced use of Text() element for tablature duration symbols
        with specific TAB_DURATION_SYMBOL element
      - changed Symbol::draw() to avoid drawing note dots in tablatures
1.dec (mi)
      - moved tablature visual config. from Tablature() to StaffTypeTablature()
1.dec (ws)
      - save StaffGroup type in xml for StaffType
      - add method clone() to StaffType()
      - make StaffType() a virtual base class (so it cannot be created)
30.nov (ws)
      - add "styled" button to text toolbar (gives a hint why most widgets are inactive)
29.nov (ws)
      - split StaffType() into StaffTypePitched() StaffTypeTablature() and
        StaffTypePercussion()
      (lv)
      - fix MusicXML import of bracket and octave-shift
28.nov (lv)
      - fix MusicXML import of pedal and trill lines
       (mi)