@@ -48,155 +48,7 @@
 #include "lyrics.h"
 #include "navigate.h"
 #include "stafftype.h"
-
-//---------------------------------------------------------
-//   Stem
-//    Notenhals
-//---------------------------------------------------------
-
-Stem::Stem(Score* s)
-   : Element(s)
-      {
-      _len = 0.0;
-      setFlags(ELEMENT_MOVABLE | ELEMENT_SELECTABLE);
-      }
-
-//---------------------------------------------------------
-//   draw
-//---------------------------------------------------------
-
-void Stem::draw(QPainter& p, ScoreView*) const
-      {
-      if(staff()->useTablature()) {
-            if(staff()->staffType()->slashStyle())
-                  return;
-//		  else
-//			  // TO DO: ADD HERE STEMS FOR TABLATURE
-            }
-      qreal lw = point(score()->styleS(ST_stemWidth));
-      QPen pen(p.pen());
-      pen.setWidthF(lw);
-//      pen.setCapStyle(Qt::FlatCap);
-      pen.setCapStyle(Qt::RoundCap);
-      p.setPen(pen);
-      p.drawLine(QLineF(0.0, 0.0, 0.0, stemLen()));
-      }
-
-//---------------------------------------------------------
-//   write
-//---------------------------------------------------------
-
-void Stem::write(Xml& xml) const
-      {
-      xml.stag("Stem");
-      Element::writeProperties(xml);
-      if (_userLen.val() != 0.0)
-            xml.sTag("userLen", _userLen);
-      xml.etag();
-      }
-
-//---------------------------------------------------------
-//   read
-//---------------------------------------------------------
-
-void Stem::read(QDomElement e)
-      {
-      for (e = e.firstChildElement(); !e.isNull(); e = e.nextSiblingElement()) {
-            QString tag(e.tagName());
-            if (tag == "userLen")
-                  _userLen = Spatium(e.text().toDouble());
-            else if (!Element::readProperties(e))
-                  domError(e);
-            }
-      }
-
-//---------------------------------------------------------
-//   setVisible
-//---------------------------------------------------------
-
-void Stem::setVisible(bool f)
-      {
-      Element::setVisible(f);
-      Chord* chord = static_cast<Chord*>(parent());
-      if (chord && chord->hook() && chord->hook()->visible() != f)
-            chord->hook()->setVisible(f);
-      }
-
-//---------------------------------------------------------
-//   bbox
-//---------------------------------------------------------
-
-QRectF Stem::bbox() const
-      {
-      double w = point(score()->styleS(ST_stemWidth));
-      double l = _len + point(_userLen);
-      return QRectF(-w * .5, 0, w, l).normalized();
-      }
-
-//---------------------------------------------------------
-//   updateGrips
-//---------------------------------------------------------
-
-void Stem::updateGrips(int* grips, QRectF* grip) const
-      {
-      *grips   = 1;
-      QPointF p(0.0, stemLen());
-      grip[0].translate(canvasPos() + p);
-      }
-
-//---------------------------------------------------------
-//   editDrag
-//---------------------------------------------------------
-
-void Stem::editDrag(int, const QPointF& delta)
-      {
-      _userLen += Spatium(delta.y() / spatium());
-      Chord* c = static_cast<Chord*>(parent());
-      if (c->hook())
-            c->hook()->move(0.0, delta.y());
-      }
-
-//---------------------------------------------------------
-//   toDefault
-//---------------------------------------------------------
-
-void Stem::toDefault()
-      {
-      _userLen = Spatium(0.0);
-      setUserOff(QPointF());
-      }
-
-//---------------------------------------------------------
-//   acceptDrop
-//---------------------------------------------------------
-
-bool Stem::acceptDrop(ScoreView*, const QPointF&, int type, int subtype) const
-      {
-      if ((type == TREMOLO) && (subtype <= TREMOLO_R64)) {
-            return true;
-            }
-      return false;
-      }
-
-//---------------------------------------------------------
-//   drop
-//---------------------------------------------------------
-
-Element* Stem::drop(ScoreView*, const QPointF&, const QPointF&, Element* e)
-      {
-      Chord* ch = chord();
-      switch(e->type()) {
-            case TREMOLO:
-                  e->setParent(ch);
-                  score()->setLayout(ch->measure());
-                  score()->undoAddElement(e);
-                  break;
-            default:
-                  delete e;
-                  break;
-            }
-      return 0;
-      }
+#include "stem.h"
 
 //---------------------------------------------------------
 //   StemSlash
