@@ -80,6 +80,7 @@
 #include "box.h"
 #include "instrchange.h"
 #include "stafftype.h"
+#include "stem.h"
 
 extern bool debugMode;
 extern bool showInvisible;
@@ -400,7 +401,7 @@ Staff* Element::staff() const
       if (_track == -1)
             return 0;
       Staff* st = score()->staff(staffIdx());
-      if (st == 0) {
+      if (debugMode && st == 0) {
             printf("no staff: <%s> track %d staffIdx %d, staves %d\n",
                name(), track(), track()/VOICES, score()->staves().size());
             }
